--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,10 @@
-
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# {{ site.mysweetvariable }}
 
 title: AgentC
 email: Inquiry@agentc.io
-description: > # this means to ignore newlines until "baseurl:"
-AgentC's website.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.agentc.io" # the base hostname & protocol for your site
-
+description: AgentC's website.
+baseurl: ""
+url: "http://www.agentc.io"
 # Build settings
 markdown: kramdown
-
-
 exclude: [params.json, .DS_Store, LICENSE, README.md, feed.xml]
